--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
 							<a href="">contact</a>
 						</div>
 						<div class="menu-icon" id="mobileMenu">
-							<i class="fa-solid fa-bars"></i>
+							<span></span>
+							<span></span>
+							<span></span>
 						</div>
 					</div>
 				</div>
