vegetables page made

--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,8 @@
 	<!-- fontAwesome link end  -->
 
 	<!-- css link start -->
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="assets/css/global.css">
+	<link rel="stylesheet" href="assets/css/homepage.css">
 	<!-- css link end -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
 		rel="stylesheet" />
@@ -37,7 +38,7 @@
 <body>
 
 	<!-- header start -->
-	<header>
+	<header id="main-header">
 		<div class="container">
 			<div class="row">
 				<div class="main-box flex justify-between align-center">
@@ -53,7 +54,7 @@
 									<a href="">home</a>
 								</li>
 								<li>
-									<a href="">vegetables</a>
+									<a href="vegetable.html">vegetables</a>
 								</li>
 								<li>
 									<a href="">fruites</a>
