header fix issue

--- a/homepage.html
+++ b/homepage.html
@@ -26,7 +26,8 @@
 	<!-- owl carousel js and css end -->
 
 	<!-- lottie player js link start -->
-	<script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+	<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
 	<!-- lootie player js link end -->
 
 	<!-- wow-js cdn start -->
@@ -46,7 +47,7 @@
 			<div class="row">
 				<div class="main-box flex justify-between align-center">
 					<div class="logo">
-						<a href="#">
+						<a href="homepage.html">
 							<img src="assets/img/mi-logo.png" alt="">
 						</a>
 					</div>
@@ -96,8 +97,7 @@
 			<div class="row">
 				<div class="content">
 					<div class="lottie-animation">
-						<dotlottie-player src="https://lottie.host/fe50dc08-1c29-4112-9e61-c19e23f99a49/AgVWKnoq62.json"
-							background="transparent" speed="1" style="width: 300px; height: 160px;" loop autoplay></dotlottie-player>
+						<lottie-player src="https://lottie.host/fe50dc08-1c29-4112-9e61-c19e23f99a49/AgVWKnoq62.json" background="transparent" speed="1" style="width: 300px; height: 300px" direction="1" mode="normal" loop controls autoplay></lottie-player>
 					</div>
 					<span>Growth and development of India through exports</span>
 					<h2>|| निर्यात से विकास, निर्माण भारत का ||</h2>
